[package]
name = "rust-surf"
version = "0.1.0"
authors = ["Elica <elicayuu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
async-std = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.42"
futures = "0.3.1"
rand = "0.7.2"